--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,8 @@
 @tailwind utilities;
 
 @layer base {
+    [x-cloak] { display: none !important; }
+
     * {
         font-family: 'Inter', sans-serif;
     }
